--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ body {
 </head>
 <body>
 
+  <script type="text/javascript" src="utils.js"></script>
+  <script type="text/javascript" src="preload.js"></script>
+  <script type="text/javascript" src="create.js"></script>
+  <script type="text/javascript" src="update.js"></script>
+  <script type="text/javascript" src="render.js"></script>
 	<script type="text/javascript" src="game.js"></script>
 
 </body>
