rough working version is a good place to start for real now

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {
 </head>
 <body>
 
+  <script type="text/javascript" src="vars.js"></script>
   <script type="text/javascript" src="utils.js"></script>
   <script type="text/javascript" src="preload.js"></script>
   <script type="text/javascript" src="create.js"></script>
