moving files around

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ body {
 </head>
 <body>
 
-  <script type="text/javascript" src="vars.js"></script>
-  <script type="text/javascript" src="utils.js"></script>
-  <script type="text/javascript" src="preload.js"></script>
-  <script type="text/javascript" src="create.js"></script>
-  <script type="text/javascript" src="update.js"></script>
-  <script type="text/javascript" src="render.js"></script>
+  <script type="text/javascript" src="js/vars.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/preload.js"></script>
+  <script type="text/javascript" src="js/create.js"></script>
+  <script type="text/javascript" src="js/update.js"></script>
+  <script type="text/javascript" src="js/render.js"></script>
 	<script type="text/javascript">
     var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'leafy-game', { preload: preload, create: create, update: update, render: render } );
   </script>
