--- a/test.html
+++ b/test.html
@@ -9,16 +9,22 @@ body {
   margin: 1em;
   background: #F4F4F4;
   background: #eee;
-	display: flex;
-	justify-content: center;
+  text-align: center;
 }
 canvas {
   width: 800px;
   height: 600px;
+  margin: 1em auto;
 }
 </style>
 </head>
 <body>
+
+
+<button onclick="game.owl.animations.play('blink');">blink</button>
+<button onclick="game.owl.animations.play('look');">look</button>
+<button onclick="game.owl.animations.play('flap');">flap</button>
+
 
 <script type="text/javascript">
 var game = new Phaser.Game( (800*window.devicePixelRatio), (600*window.devicePixelRatio), Phaser.CANVAS, 'owl-game', { preload: preload, create: create, update: update, render: render } );
