--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head> 
 <meta charset="UTF-8" />
 <title>test</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 <script type="text/javascript" src="lib/phaser.min.js"></script>
 <style type="text/css">
 body {
