--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>Leafy</title>
 <script type="text/javascript" src="lib/phaser.min.js"></script>
+<script type="text/javascript" src="lib/vue.js"></script>
 <style type="text/css">
 body {
   margin: 1em;
