--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
   margin: 1em;
   background: #F4F4F4;
   background: #eee;
+  background: #000;
 	display: flex;
 	justify-content: center;
 }
