--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="lib/vue.js"></script>
 <style type="text/css">
 body {
-  margin: 1em;
+  margin: 0;
   background: #F4F4F4;
   background: #eee;
   background: #000;
