bee enemy using factory pattern, interesting!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 <meta charset="UTF-8" />
 <title>Leafy</title>
-<script type="text/javascript" src="lib/phaser.min.js"></script>
+<script type="text/javascript" src="lib/phaser2.0.1.js"></script>
 <script type="text/javascript" src="lib/vue.js"></script>
 <style type="text/css">
 body {
@@ -24,6 +24,7 @@ canvas {
 
   <script type="text/javascript" src="js/vars.js"></script>
   <script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/enemies.js"></script>
   <script type="text/javascript" src="js/preload.js"></script>
   <script type="text/javascript" src="js/create.js"></script>
   <script type="text/javascript" src="js/update.js"></script>
