leafy cleanup js is slightly more modular and a few functions are more pure

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ canvas {
 
   <script type="text/javascript" src="js/vars.js"></script>
   <script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/leafy.js"></script>
   <script type="text/javascript" src="js/enemies.js"></script>
   <script type="text/javascript" src="js/preload.js"></script>
   <script type="text/javascript" src="js/create.js"></script>
