another big commit; flowers for the bees; some code reorg

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@ canvas {
 <body>
 
   <script type="text/javascript" src="js/vars.js"></script>
-  <script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/trees.js"></script>
   <script type="text/javascript" src="js/moon.js"></script>
+  <script type="text/javascript" src="js/flower.js"></script>
   <script type="text/javascript" src="js/owl.js"></script>
   <script type="text/javascript" src="js/leafy.js"></script>
   <script type="text/javascript" src="js/enemies.js"></script>
