another huge commit; leafy eyes; gaps introduced and trying to optimize play, need to move trees, leaves and flowers around gaps

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ canvas {
 <body>
 
   <script type="text/javascript" src="js/vars.js"></script>
+  <script type="text/javascript" src="js/gaps.js"></script>
   <script type="text/javascript" src="js/trees.js"></script>
   <script type="text/javascript" src="js/moon.js"></script>
   <script type="text/javascript" src="js/flower.js"></script>
