subtle border for desktop

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ body {
 canvas {
   width: 800px;
   height: 600px;
+  border: 15px solid rgba(255,255,255,.1);
+  border-radius: 15px;
 }
 /* Vertical centering. Oh, CSS... */
 html, body, .wrap {
