touch input start

--- a/index.html
+++ b/index.html
@@ -3,27 +3,13 @@
 <head> 
 <meta charset="UTF-8" />
 <title>Leafy</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 <script type="text/javascript" src="lib/phaser2.0.1.js"></script>
 <script type="text/javascript" src="lib/vue.js"></script>
 <style type="text/css">
 body {
   margin: 0;
   background: #111;
-}
-canvas {
-  width: 800px;
-  height: 600px;
-  border: 15px solid rgba(255,255,255,.1);
-  border-radius: 15px;
-}
-/* Vertical centering. Oh, CSS... */
-html, body, .wrap {
-  height: 100%;
-}
-.wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 </style>
 </head>
