--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <meta charset="UTF-8" />
 <title>Leafy</title>
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-<script type="text/javascript" src="lib/phaser2.0.1.js"></script>
-<script type="text/javascript" src="lib/vue.js"></script>
+<script type="text/javascript" src="lib/phaser.js"></script>
 <style type="text/css">
 body {
   margin: 0;
   background: #111;
+}
+canvas {
+  width: 100%;
+  height: 100%;
 }
 </style>
 </head>
@@ -30,7 +33,7 @@ body {
   <script type="text/javascript" src="js/update.js"></script>
   <script type="text/javascript" src="js/render.js"></script>
 	<script type="text/javascript">
-    var game = new Phaser.Game( (800*window.devicePixelRatio), (600*window.devicePixelRatio), Phaser.CANVAS, 'leafy-game', { preload: preload, create: create, update: update, render: render } );
+    var game = new Phaser.Game( '100%', '100%', Phaser.CANVAS, 'leafy-game', { preload: preload, create: create, update: update, render: render } );
   </script>
 </body>
 </html>
