gaps to platforms

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="js/vars.js"></script>
   <script src="js/Boot.js"></script>
   <script src="js/Preloader.js"></script>
-  <script src="js/gaps.js"></script>
+  <script src="js/platforms.js"></script>
   <script src="js/trees.js"></script>
   <script src="js/moon.js"></script>
   <script src="js/flower.js"></script>
