add GA tracker (no plugin, uses localstorage)

--- a/build.html
+++ b/build.html
@@ -29,5 +29,10 @@
   app.initialize();
   </script>
 
+  <script>
+    ga_storage._setAccount('UA-5536882-24'); //Replace with your own
+    ga_storage._trackPageview('/index.html');
+  </script>
+
 </body>
 </html>
