--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="js/ui.js"></script>
   <script src="js/MainMenu.js"></script>
   <script src="js/Game.js"></script>
+  <script src="js/GameOver.js"></script>
   <script type="text/javascript">
   var game = {};
   app.initialize();
