jumper gyro tests, lame tangents

--- a/test-jumper.html
+++ b/test-jumper.html
@@ -23,6 +23,7 @@
 <div id="orientation"></div>
 
 <script src="lib/phaser2.4.4.js"></script>
+<script src="lib/gyro.js"></script>
 <script src="js/moon.js"></script>
 
 <script>
