comments and cleanup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <ul>
       <li>leafy.x: {{game.leafy.x}}</li>
       <li>camera.x: {{game.camera.x}}</li>
-      <li>platforms to recycle: {{game.platformstoRecycle}}</li>
+      <li>platforms to recycle: {{game.platformstoRecycle.length}}</li>
       <li>p1: {{game.platforms.children[0].x}} ({{game.bluerings.children[0].x}})</li>
       <li>p2: {{game.platforms.children[1].x}} ({{game.bluerings.children[1].x}})</li>
       <li>p3: {{game.platforms.children[2].x}} ({{game.bluerings.children[2].x}})</li>
@@ -33,7 +33,7 @@
       <li>p7: {{game.platforms.children[6].x}} ({{game.bluerings.children[6].x}})</li>
       <li>p8: {{game.platforms.children[7].x}} ({{game.bluerings.children[7].x}})</li>
 
-      <li>rings to recycle: {{game.ringstoRecycle}}</li>
+      <li>rings to recycle: {{game.ringstoRecycle.length}}</li>
     </ul>
 
     <span id="log"></span>
