pause using html/css for UI since that's kinda easier to persist

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 <body>
 
+  <div id="ui" class="hide">
+    <button id="pause" onclick="pause()">Pause</button>
+  </div>
+  
   <div id="game"></div>
   <div id="orientation"></div>
 
