play/pause nice!

--- a/build.html
+++ b/build.html
@@ -18,7 +18,12 @@
 </head>
 <body>
 
-  <a href="index.html" id="refresh"></a>
+  <a id="refresh" href="index.html"></a>
+  <div id="ui" class="hide">
+    <span id="pause"></span>
+  </div>
+
+
   <div id="game"></div>
   <div id="orientation"></div>
 
