--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="apple-mobile-web-app-title" content="Phaser App">
-  <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi, minimal-ui" />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -22,13 +21,14 @@
   <div id="ui" class="hide">
     <span id="pause"></span>
   </div>
-  
+
   <div id="game"></div>
   <div id="orientation"></div>
 
   <script type="text/javascript">
-    if (!navigator.userAgent.toLowerCase().match('rau')) {
-        document.write("<script src='cordova.js'><\/script>");
+    var is_localdev = false;
+    if (document.URL == "http://localhost:3000/") {
+      is_localdev = true;
     }
   </script>
 
@@ -48,14 +48,13 @@
   <script src="js/Game.js"></script>
   <script src="js/GameOver.js"></script>
   <script type="text/javascript">
-  var game = {};
-  app.initialize();
+    var game = {};
+    app.initialize();
 
-  // testing only
-  var is_chrome = navigator.userAgent.toLowerCase().indexOf('rau') > -1;
-  if (typeof cordova != undefined && is_chrome) {
-    app.onDeviceReady();
-  }
+    // testing only
+    if (is_localdev) {
+      app.onDeviceReady();
+    }
   </script>
 
 </body>
