win, clouds, some new lag...

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script src="js/platforms.js"></script>
   <script src="js/trees.js"></script>
   <script src="js/moon.js"></script>
+  <script src="js/cloud.js"></script>
   <script src="js/flower.js"></script>
   <script src="js/owl.js"></script>
   <script src="js/leafy.js"></script>
@@ -48,6 +49,7 @@
   <script src="js/MainMenu.js"></script>
   <script src="js/Game.js"></script>
   <script src="js/GameOver.js"></script>
+  <script src="js/Win.js"></script>
   <script type="text/javascript">
     var game = {};
     app.initialize();
